build: 누락된 단계 복원 #70

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           node-version: 20
 
+      - name: install-dependencies
+        run: |
+          sudo apt install -y jq
+          npm install -g eas-cli
+
       - name: versioning
         run: |
           VERSION=$(jq -r '.version' package.json)
