--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
           sudo apt install -y jq
           npm install -g eas-cli
+          echo "NODE_OPTIONS=--max_old_space_size=4096" >> $GITHUB_ENV
+          yarn install --immutable --immutable-cache
 
       - name: versioning
         run: |
