--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,11 @@
 {
   "build": {
     "base": {
-      "node": "20.18.3"
+      "node": "20.18.3",
+      "env": {
+        "NODE_OPTIONS": "--max_old_space_size=4096",
+        "YARN_ENABLE_IMMUTABLE_INSTALLS": "true"
+      }
     },
     "production": {
       "extends": "base",
