build: yarn install 시 버전 엄격 검사 제거 #70

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,7 +21,7 @@ jobs:
       - name: install-dependencies
         run: |
           npm install -g eas-cli
-          yarn install --immutable --immutable-cache
+          yarn install --immutable-cache
 
       - name: versioning
         run: |
