--- a/eas.json
+++ b/eas.json
@@ -3,8 +3,7 @@
     "base": {
       "node": "20.18.3",
       "env": {
-        "NODE_OPTIONS": "--max_old_space_size=4096",
-        "YARN_ENABLE_IMMUTABLE_INSTALLS": "true"
+        "NODE_OPTIONS": "--max_old_space_size=4096"
       }
     },
     "production": {
