--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,22 +18,11 @@ jobs:
         with:
           node-version: 20
 
-      - name: cache-yarn
-        uses: actions/cache@v4
-        with:
-          path: |
-            .yarn/cache
-            .yarn/install-state.gz
-          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
       - name: install-dependencies
         run: |
           npm install -g eas-cli
           echo "NODE_OPTIONS=--max_old_space_size=4096" >> $GITHUB_ENV
-          echo "YARN_ENABLE_IMMUTABLE_INSTALLS=true" >> $GITHUB_ENV
-          yarn install --immutable --immutable-cache
+          yarn install
         shell: bash
 
       - name: versioning
