--- a/eas.json
+++ b/eas.json
@@ -1,10 +1,7 @@
 {
   "build": {
     "base": {
-      "node": "20.18.3",
-      "env": {
-        "NODE_OPTIONS": "--max_old_space_size=4096"
-      }
+      "node": "20.18.3"
     },
     "production": {
       "extends": "base",
