--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: versioning
         run: |
-          VERSION=$(jq -r '.version' package.json)
+          VERSION=$(jq -r '.expo.version' app.json)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: build
