--- a/app.json
+++ b/app.json
@@ -3,14 +3,11 @@
     "name": "이게뭐약",
     "slug": "whatispill",
     "owner": "mustbemadness",
-    "version": "2.1.2",
+    "version": "2.2.0",
     "orientation": "portrait",
     "icon": "./assets/icons/icon.png",
     "newArchEnabled": true,
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.mbm.whatispill",
@@ -32,7 +29,7 @@
       },
       "edgeToEdgeEnabled": false,
       "package": "com.mbm.whatispill",
-      "versionCode": 13,
+      "versionCode": 14,
       "softwareKeyboardLayoutMode": "resize",
       "permissions": [
         "android.permission.INTERNET",
@@ -83,9 +80,7 @@
           ]
         }
       ],
-      [
-        "expo-localization"
-      ]
+      ["expo-localization"]
     ],
     "extra": {
       "eas": {
