--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "whatispill",
-  "version": "2.1.2",
   "repository": "https://github.com/KNUT-Capstone-Design-team-1/wip-application-v2",
   "main": "index.ts",
   "scripts": {
@@ -8,7 +7,7 @@
     "android": "expo run:android",
     "android:gradle-clean": "cd android && ./gradlew clean && cd ..",
     "ios": "expo run:ios",
-    "eas-build-pre-install": "corepack enable && yarn set version 4",
+    "eas-build-pre-install": "corepack enable",
     "prebuild": "npx expo prebuild",
     "rebuild": "npx expo prebuild --clean",
     "pod": "cd ios && pod deintegrate && pod install && cd ..",
