--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,7 +33,7 @@ jobs:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
         run: |
           eas build -p android --profile production --non-interactive --json > build.json
-          BUILD_URL=$(jq -r '.artifacts.buildUrl' build.json)
+          BUILD_URL=$(jq -r '.[0].artifacts.buildUrl' build.json)
           curl -L -o wip-${{ env.VERSION }}-${{ github.run_number }}.aab "$BUILD_URL"
 
       - uses: actions/upload-artifact@v4
