project: expo 전환 후 프로젝트 정리

--- a/package.json
+++ b/package.json
@@ -6,17 +6,12 @@
     "start": "expo start --clear",
     "android": "expo run:android",
     "android:gradle-clean": "cd android && ./gradlew clean && cd ..",
+    "apk": "eas build --platform android --profile development --local --output-type apk",
     "ios": "expo run:ios",
+    "ipa": "eas build --platform ios --profile development --local",
     "eas-build-pre-install": "corepack enable",
     "prebuild": "npx expo prebuild",
     "rebuild": "npx expo prebuild --clean",
-    "pod": "cd ios && pod deintegrate && pod install && cd ..",
-    "podstart": "cd ios && pod deintegrate && pod install && cd .. && expo run:ios",
-    "apk": "cd android && ./gradlew assembleRelease && cd ..",
-    "aab": "cd android && ./gradlew bundleRelease && cd ..",
-    "ipa": "xcodebuild -workspace ios/whatispill.xcworkspace -scheme whatispill_production -sdk iphoneos -configuration Release -archivePath build/whatispill.xcarchive archive && xcodebuild -exportArchive -archivePath build/whatispill.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath build/",
-    "reset:android": "bash ./reset_build_cache.sh android",
-    "reset:ios": "bash ./reset_build_cache.sh ios",
     "prepare": "husky",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
