project: 프로젝트 정리
- apk 빌드 시 오류 수정

#70

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start --clear",
     "android": "expo run:android",
     "android:gradle-clean": "cd android && ./gradlew clean && cd ..",
-    "apk": "eas build --platform android --profile development --local --output-type apk",
+    "apk": "eas build --platform android --profile development --local",
     "ios": "expo run:ios",
     "ipa": "eas build --platform ios --profile development --local",
     "eas-build-pre-install": "corepack enable",
