--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-forge": "^1.3.1",
     "patch-package": "^8.0.0",
     "react": "19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-native": "0.81.4",
     "react-native-device-info": "^14.0.4",
     "react-native-fs": "^2.20.0",
