--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.12",
     "expo-font": "~14.0.8",
+    "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-localization": "~17.0.7",
     "expo-splash-screen": "~31.0.10",
